fix: collapse others cards

--- a/src/client/styles/results.scss
+++ b/src/client/styles/results.scss
@@ -69,7 +69,7 @@
     transition: max-height 0.25s ease-in-out;
     background-color: #f1f1f1;
     border-radius: 0 0 5px 5px;
-    &.expand {
+    &.hided {
         max-height: 0;
         overflow: hidden;
         transition: max-height 0.25s ease-in-out;
